Fight the magic system a bit.

--- a/src/common/GNUmakefile
+++ b/src/common/GNUmakefile
@@ -1,7 +1,7 @@
 .SUFFIXES:
 all:
-	make -C ../.. common
+	${MAKE} -C ../.. common
 clean:
 	rm -r ../../obj/common/
 %::
-	make -C ../.. obj/common/$@
+	${MAKE} -C ../.. obj/common/$@
