--- a/src/char/GNUmakefile
+++ b/src/char/GNUmakefile
@@ -1,7 +1,7 @@
 .SUFFIXES:
 all:
-	make -C ../.. tmwa-char
+	${MAKE} -C ../.. tmwa-char
 clean:
 	rm -r ../../obj/char/
 %::
-	make -C ../.. obj/char/$@
+	${MAKE} -C ../.. obj/char/$@
